<resources>
    <string name="app_name">Personal Data</string>
    <string name="en" translatable="false">EN</string>
    <string name="es" translatable="false">ES</string>
    <string name="nombre">FIRST NAME:</string>
    <string name="nombrePlaceholder">Enter your first name...</string>
    <string name="apellidos">LAST NAME:</string>
    <string name="apellidosPlaceholder">Enter your last name...</string>
    <string name="edad">AGE:</string>
    <string name="genero">SEX:</string>
    <string name="hombre">Male</string>
    <string name="mujer">Female</string>
    <string name="estadoCivil">MARITAL STATUS:</string>
    <string name="estadoCivilprompt">Choose your status...</string>
    <string-array name="listaEstadoCivil">
        <item name="estadoCivilSelect">Choose your status...</item>
        <item name="soltero">Single</item>
        <item name="casado">Married</item>
        <item name="separado">Separated</item>
        <item name="viudo">Widow</item>
        <item name="otro">Other</item>
    </string-array>
    <string name="tienesHijos">ANY CHILDREN?</string>
    <string name="no">No</string>
    <string name="si">Yes</string>
    <string name="enviar">SEND</string>
    <string name="borrar">CLEAR</string>
    <string name="mensaje">Fill in the following information:</string>

    <string name="mensajeEdadMayor">adult</string>
    <string name="mensajeEdadMinor">underage</string>
    <string name="mensajeHombre">male</string>
    <string name="mensajeMujer">female</string>
    <string name="hijosSi">with children.</string>
    <string name="hijosNo">with no children.</string>

    <string name="y"> and </string>
</resources>